--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,6 +4,11 @@ node_modules/
 # TypeScript Build-Output
 dist/
 
+# next and enviorment
+.next/
+.swc/
+.*.env
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
