--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Filters\" />
+    <Folder Include="Helper\Filters\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
